omni/tests/goldens/types/unknown_type_15.err
tests/goldens/types/unknown_type_15.omni:1:13: error: unknown type "Mystery15"
     1 | let value15:Mystery15 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_15.omni:1:1: error: cannot assign int to Mystery15
     1 | let value15:Mystery15 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery15 or change the variable type to int
